--- a/index.html
+++ b/index.html
@@ -8,20 +8,8 @@
 </head>
 <body>
     <h1>Food Tracker</h1>
-    <div id="camera-section">
-        <button id="camera-button">Take Photo</button>
-        <input type="file" id="image-upload" accept="image/*">
-        <img id="image-preview" src="" alt="Image Preview">
-    </div>
-    <div id="calorie-input-section">
-        <input type="number" id="calorie-input" placeholder="Calories">
-        <button id="save-button">Save</button>
-    </div>
-    <div id="food-history">
-        <h2>Food History</h2>
-        <ul id="food-list"></ul>
-    </div>
-    <div id="calendar-section">
+    <p>Welcome to my food tracking app!</p>
+    <div id="content">
         </div>
     <script src="script.js"></script>
 </body>
